# formal_langs

./: .gitignore  lab1.py  lab_2_3.ipynb  lab_4.ipynb  pyproject.toml
